# pdfmux

./: .env.example  .gitignore  ARCH-READING-ORDER.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  ML-HEADING-CLASSIFIER.md  README.md  SECURITY.md  feedback.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-site.yml  design-system.yml  security.yml
blog/content/posts/: real-world-pdf-benchmark.md
design-system/: DESIGN_SYSTEM.md  SKILL.md  lint.py
docs/: ARCHITECTURE.md  CHANGELOG.md
examples/: basic_usage.py  batch_processing.py  mcp_agent.py
scripts/: demo-sequence.sh  extract_heading_features.py  record-demo.sh  train_heading_classifier.py
site/: CNAME  index.html  privacy.html  terms.html
site/blog/: index.html  pdf-extraction-python-confidence-scoring.html
src/pdfmux/: __init__.py  agentic.py  audit.py  chunking.py  cli.py  detect.py  errors.py  headings.py  image_table_ocr.py  kv_extract.py  mcp_server.py  parallel.py  pipeline.py  postprocess.py  regions.py  schema_validator.py  table_fallback.py  types.py
src/pdfmux/extractors/: __init__.py  fast.py  llm.py  llm_providers.py  ocr.py  rapid_ocr.py  tables.py
src/pdfmux/formatters/: __init__.py  csv_fmt.py  json_fmt.py  markdown.py
src/pdfmux/integrations/: __init__.py  langchain.py  llamaindex.py
src/pdfmux/providers/: __init__.py  _discovery.py  base.py  claude.py  gemini.py  ollama.py  openai_compatible.py  openai_native.py
src/pdfmux/router/: engine.py  scorer.py
src/readable/: __init__.py  cli.py  mcp_server.py  pipeline.py  postprocess.py
src/readable/extractors/: __init__.py  llm.py  ocr.py  tables.py
src/readable/formatters/: markdown.py
tests/: conftest.py  test_agentic.py  test_analyze.py  test_api_stability.py  test_audit.py  test_block_score.py  test_budget.py  test_chunking.py  test_detect.py  test_errors.py  test_extractors.py  test_headings.py  test_integrations.py  test_layout.py  test_llm_providers.py  test_mcp_enhanced.py  test_parallel.py  test_pipeline.py  test_postprocess.py  test_provenance.py  test_providers_base.py  test_public_api.py  test_rapid_ocr.py  test_regions.py  test_schema_validator.py  test_scorer.py  test_security.py  test_table_fallback.py
