[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfmux"
version = "0.4.0"
description = "PDF extraction that checks its own work. Multi-pass pipeline for LLM-ready Markdown."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nameet Potnis" },
]
keywords = ["pdf", "markdown", "llm", "ai", "mcp", "extraction", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
tables = ["docling>=2.0.0"]
ocr = ["rapidocr>=3.0.0", "onnxruntime>=1.19.0"]
ocr-heavy = ["surya-ocr>=0.6.0"]
llm = ["google-genai>=1.0.0"]
all = ["pdfmux[tables,ocr,llm]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
pdfmux = "pdfmux.cli:app"

[project.urls]
Homepage = "https://pdfmux.com"
Repository = "https://github.com/NameetP/pdfmux"
Issues = "https://github.com/NameetP/pdfmux/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfmux"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
