[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfmux"
version = "1.4.0"
description = "Universal PDF extraction orchestrator. Routes each page to the best of 5 backends + BYOK LLM, audits output, re-extracts failures. CLI, Python API, MCP server, LangChain, LlamaIndex."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nameet Potnis" },
]
keywords = ["pdf", "markdown", "llm", "ai", "mcp", "extraction", "converter", "rag", "ocr", "langchain", "llamaindex", "orchestrator", "document-ingestion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "pymupdf>=1.24.0",  # garbage filter handles 1.27 find_tables() regression
    "pymupdf4llm>=0.0.10",
    "rich>=13.0.0",
]

[project.optional-dependencies]
serve = ["mcp>=1.0.0", "uvicorn>=0.30.0"]
tables = ["docling>=2.0.0"]
opendataloader = ["opendataloader-pdf>=2.0.0"]
ocr = ["rapidocr>=3.0.0", "onnxruntime>=1.19.0"]
ocr-heavy = ["surya-ocr>=0.6.0"]
llm = ["google-genai>=1.0.0"]
llm-claude = ["anthropic>=0.40.0"]
llm-openai = ["openai>=1.0.0"]
llm-ollama = ["ollama>=0.4.0"]
llm-all = ["pdfmux[llm,llm-claude,llm-openai,llm-ollama]"]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
all = ["pdfmux[serve,tables,ocr,opendataloader,llm-all,langchain,llamaindex]"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
pdfmux = "pdfmux.cli:app"

[project.urls]
Homepage = "https://pdfmux.com"
Documentation = "https://github.com/NameetP/pdfmux#readme"
Repository = "https://github.com/NameetP/pdfmux"
Issues = "https://github.com/NameetP/pdfmux/issues"
Changelog = "https://github.com/NameetP/pdfmux/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfmux"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
